test/expected/explain_hc8.out
explain short char8_t x
              ^
15: error: "short char8_t" is illegal for built-in type
